# plot-app

./: CMakeLists.txt
cmake/: glad.cmake
include/: PlotApp.h
include/plot_app/: plot_app.hpp
include/render_module/: render_module.hpp  zoom_view.hpp  zoomable_canvas.hpp
src/: PlotApp.cpp  main.cpp  nvg_wrapper.cpp  plot_app.cpp  render_module.cpp  zoom_view.cpp  zoomable_canvas.cpp
